# proofcite

./: CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_v0.1.2.md  __init__.py  api.py  cli.py  config.py  core.py  docker-compose.yml  dspy_cli.py  dspy_reranker.py  dspy_variant.py  embedding.py  evidence.py  gradio_app.py  pyproject.toml  regulatory.py  requirements.txt  retriever.py
.github/workflows/: docker.yml  tests.yml
evals/: __init__.py  assessor.py  cli.py  dspy_judge.py  models.py  optimize_judge.py  runner.py
examples/: client.py  negotiation_demo.py  optimized_demos.jsonl  report_value.py
examples/regulatory/: faa_uas_rules.txt  fda_guidance.txt  fda_medication_safety.txt  hipaa_privacy.txt  judge_train.jsonl  rules_extended.jsonl  rules_min.jsonl  sec_advertising.txt  sec_rules.txt  soc2_change_mgmt.txt
proofcite.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
spaces/: README.md
tests/: test_core.py  test_dspy_variant.py  test_evals.py
